# blue-archive-notes

./: .gitignore  CMakeLists.txt  README.md
src/cpp/: Utils.cpp  Utils.h  main.cpp
src/glsl/: backgroundFragment.glsl  backgroundVertex.glsl  fragment.glsl  vertex.glsl
